src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref_mut.stderr
error[E0599]: no method named `as_deref_mut` found for enum `std::result::Result<{integer}, _>` in the current scope
  --> $DIR/result-as_deref_mut.rs:4:31
   |
LL |     let _result = &mut Ok(42).as_deref_mut();
   |                               ^^^^^^^^^^^^ help: there is an associated function with a similar name: `as_deref_err`
   |
   = note: the method `as_deref_mut` exists but the following trait bounds were not satisfied:
           `{integer}: std::ops::DerefMut`
           `<{integer} as std::ops::Deref>::Target = _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
